--- a/app/views/space_listings/index.html.erb
+++ b/app/views/space_listings/index.html.erb
@@ -1,2 +1,35 @@
 <h1>SpaceListings#index</h1>
 <p>Find me in app/views/space_listings/index.html.erb</p>
+
+<table border="1">
+  <thead>
+    <tr>
+      <th>title</th>
+      <th>description</th>
+      <th>monthly rent</th>
+      <th>day rent</th>
+      <th>address</th>
+      <th>zip code</th>
+      <th>city</th>
+      <th>state</th>
+      <th>unit size</th>
+    </tr>
+  </thead>
+<% @space_listings.each do |space_listing| %>
+  <tbody>
+    <tr>
+      <td><%= space_listing.title %></td>
+      <td><%= space_listing.description %></td>
+      <td><%= space_listing.monthly_rent %></td>
+      <td><%= space_listing.day_rent %></td>
+      <td><%= space_listing.address %></td>
+      <td><%= space_listing.zip_code %></td>
+      <td><%= space_listing.city %></td>
+      <td><%= space_listing.state %></td>
+      <td><%= space_listing.size_width %>X<%= space_listing.length %>X<%= space_listing.height %></td>
+    </tr>
+  </tbody>
+<% end %>
+</table>
+
+<%= link_to "New space listing", new_space_listing_path %>
