--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>BetterSpace</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <link href='http://fonts.googleapis.com/css?family=Raleway:400,600,800' rel='stylesheet' type='text/css'>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body id="top">
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
-  <%= render "layouts/navbar" %>
-  <%= yield %>
 
-</body>
+  <%= render "shared/topbar" %>
+  <%= render "shared/navbar" %>
+  <%= render "shared/header" %>
+  <%= render "shared/search" %>
+  <%= render "shared/service" %>
+
+  <div id="content">
+    <div class="container">
+      <%= yield %>
+    </div>
+  </div>
+
+  <%= render "shared/footer" %>
+
+<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&amp;language=en"></script>
 </html>
