Setup the font awesome gem

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,8 +11,11 @@
  * file per style scope.
  *
  *= require bootstrap
+ *= require font-awesome
  *= require style.min
  *= require responsive.min
  *= require_tree .
  *= require_self
  */
+
+@import "font-awesome";
