Fix the sign in sign up and style its view

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <div id="header" class="carousel slide carousel-fade" data-ride="carousel">
   <div class="carousel-inner">
-    <div class="item active" style="background-image: url(/assets/theme/slide01.jpg);">
+    <div class="item active" style="background-image: url(/assets/slide01.jpg);">
       <div class="carousel-caption hidden-xs">
         <h3>First slide label</h3>
         <p>Nulla vitae elit libero, a pharetra augue mollis interdum. Phasellus quis lectus metus, at posuere neque. Sed pharetra nibh.</p>
@@ -16,7 +16,7 @@
         </div>
       </div>
     </div>
-    <div class="item" style="background-image: url(/assets/theme/slide02.jpg);">
+    <div class="item" style="background-image: url(/assets/slide02.jpg);">
       <div class="carousel-caption hidden-xs">
         <h3>Second slide label</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis lectus metus, at posuere neque. Sed pharetra nibh </p>
