--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,14 +9,14 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="index.html">
-        <%= image_tag "theme/logo.png", alt: "better-space" %>
+        <%= image_tag "logo.png", alt: "better-space" %>
       </a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-top">
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="index.html">Home</a></li>
+        <li class="active"><%= link_to "Home", root_path %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Property <b class="caret"></b></a>
           <ul class="dropdown-menu">
@@ -36,8 +36,13 @@
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </li>
-        <li><a href="#modal-signin" class="signin" data-toggle="modal" data-target="#modal-signin">Sign in</a></li>
-        <li><a href="#" class="signup" data-toggle="modal" data-target="#modal-signup">Sign up</a></li>
+        <% if current_user %>
+          <li><%= link_to 'Dashboard', "#", :class => "signin" %></li>
+          <li><%= link_to 'Sign out', destroy_user_session_path, :class => "signup", method: :delete %></li>
+        <% else %>
+          <li><%= link_to 'Sign in', new_user_session_path, :class => "signin" %></li>
+          <li><%= link_to 'Sign up', new_user_registration_path, :class => "signup" %></li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container -->
