--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,26 +17,8 @@
     <div class="collapse navbar-collapse" id="navbar-top">
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><%= link_to "Home", root_path %></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Property <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="search.html">Search (Grid View)</a></li>
-            <li><a href="search_list.html">Search (List View)</a></li>
-            <li><a href="category.html">Category (Grid View)</a></li>
-            <li><a href="category_list.html">Category (List View)</a></li>
-            <li><a href="single.html">Single page</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="blog.html">Blog Archive</a></li>
-            <li><a href="blog_single.html">Blog Single</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </li>
         <% if current_user %>
+          <li><%= link_to "New Listing", new_space_listing_path %></li>
           <li><%= link_to 'Dashboard', "#", :class => "signin" %></li>
           <li><%= link_to 'Sign out', destroy_user_session_path, :class => "signup", method: :delete %></li>
         <% else %>
