Show space listing view and fix current user

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,4 +1,9 @@
+<%= render "shared/header" %>
+<%= render "shared/search" %>
+
 <h1>Homes#index</h1>
 <p>Find me in app/views/homes/index.html.erb</p>
 
 <%= link_to "Show all space listings", space_listings_path %>
+
+<%= render "shared/service" %>
