add the Edit for controller

--- a/app/views/layouts/_forms.html.erb
+++ b/app/views/layouts/_forms.html.erb
@@ -1,12 +1,12 @@
-<%= form_for @space_listings, :html => { multipart: true }  do |f| %>
-<% if @space_listings.errors.any? %>
+<%= form_for @space_listing, :html => { multipart: true }  do |f| %>
+<% if @space_listing.errors.any? %>
     <div id="error_explanation">
       <h2>
-        <%= pluralize(@space_listings.errors.count, "error") %> prohibited
+        <%= pluralize(@space_listing.errors.count, "error") %> prohibited
         this article from being saved:
       </h2>
       <ul>
-        <% @space_listings.errors.full_messages.each do |msg| %>
+        <% @space_listing.errors.full_messages.each do |msg| %>
           <li><%= msg %></li>
         <% end %>
       </ul>
