--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,9 +8,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">
+      <%= link_to root_path, :class => "navbar-brand" do  %>
         <%= image_tag "logo.png", alt: "better-space" %>
-      </a>
+      <% end %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
