--- a/app/views/space_listings/list_view.html.erb
+++ b/app/views/space_listings/list_view.html.erb
@@ -92,6 +92,9 @@
       </div>
     </div>
     <!-- end:pagination -->
+
+    <%= paginate @space_listings %>
+
   </div>
   <!-- end:article -->
 
