--- a/app/views/space_listings/list_view.html.erb
+++ b/app/views/space_listings/list_view.html.erb
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="heading-title heading-title-alt">
-          <h3>All Space Listing</h3>
+          <h3>Space Listings</h3>
         </div>
       </div>
     </div>
@@ -13,7 +13,7 @@
       <div class="col-md-4 col-sm-4 col-xs-3">
         <a href="search.html" class="btn btn-default"><i class="fa fa-th"></i></a>
         <a href="search_list.html" class="btn btn-success"><i class="fa fa-list"></i></a>
-        <span>Show <strong>3</strong> of <strong>30</strong> result.</span>
+        <%= style_page_info(page_entries_info @space_listings) %>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-9">
         <form class="form-inline" role="form">
@@ -78,8 +78,6 @@
     <!-- end:product -->
 
     <%= paginate @space_listings %>
-    <%= page_entries_info @space_listings %>
-
 
   </div>
   <!-- end:article -->
