--- a/app/views/space_listings/show.html.erb
+++ b/app/views/space_listings/show.html.erb
@@ -13,7 +13,6 @@
             <div class="row">
               <div class="col-md-12">
                 <h2><%= @space_listing.title %></h2>
-                <%= link_to "Edit", edit_space_listing_path %>
                 <div id="slider-property" class="carousel slide" data-ride="carousel">
                   <ol class="carousel-indicators">
                     <li data-target="#slider-property" data-slide-to="0" class="">
@@ -73,6 +72,8 @@
                 </table>
                 <h3>Property Description</h3>
                 <p><%= @space_listing.description %></p>
+                <%= link_to "Edit", edit_space_listing_path, class: "btn btn-success btn-lg" %>
+                <%= link_to "Delete", space_listing_path, method: :delete, class: "btn btn-success btn-lg" %>
                   </div>
                 </div>
 
