--- a/app/views/space_listings/index.html.erb
+++ b/app/views/space_listings/index.html.erb
@@ -1,33 +1,57 @@
-<h1>All Listings</h1>
-<div class="table-responsive">
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>title</th>
-      <th>description</th>
-      <th>monthly rent</th>
-      <th>day rent</th>
-      <th>address</th>
-      <th>zip code</th>
-      <th>city</th>
-      <th>state</th>
-      <th>unit size</th>
-    </tr>
-  </thead>
-<% @space_listings.each do |space_listing| %>
-  <tbody>
-    <tr>
-      <td><%= space_listing.title %></td>
-      <td><%= space_listing.description %></td>
-      <td><%= space_listing.monthly_rent %></td>
-      <td><%= space_listing.day_rent %></td>
-      <td><%= space_listing.address %></td>
-      <td><%= space_listing.zip_code %></td>
-      <td><%= space_listing.city %></td>
-      <td><%= space_listing.state %></td>
-      <td><%= space_listing.size_width %>X<%= space_listing.size_length %>X<%= space_listing.size_height %></td>
-    </tr>
-  </tbody>
-<% end %>
-</table>
+
+<div class="row">
+  <!-- begin:article -->
+  <div class="col-md-9 col-md-push-3">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="heading-title heading-title-alt">
+          <h3>Space Listings</h3>
+        </div>
+      </div>
+    </div>
+    <!-- begin:sorting -->
+    <div class="row sort">
+      <div class="col-md-4 col-sm-4 col-xs-3">
+        <a href="search.html" class="btn btn-default"><i class="fa fa-th"></i></a>
+        <a href="search_list.html" class="btn btn-success"><i class="fa fa-list"></i></a>
+        <%= style_page_info(page_entries_info @space_listings) %>
+      </div>
+      <div class="col-md-8 col-sm-8 col-xs-9">
+        <form class="form-inline" role="form">
+          <span>Sort by : </span>
+          <div class="form-group">
+            <label class="sr-only" for="sortby">Sort by : </label>
+            <select class="form-control">
+              <option>Most Recent</option>
+              <option>Price (Low &gt; High)</option>
+              <option>Price (High &gt; Low)</option>
+              <option>Most Popular (Low &gt; High)</option>
+            </select>
+          </div>
+          <span>Show : </span>
+          <div class="form-group">
+            <label class="sr-only" for="show">Show : </label>
+            <select class="form-control" id="dropbox">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+            </select>
+          </div>
+        </form>
+      </div>
+    </div>
+    <!-- end:sorting -->
+
+    <%= render partial: 'listing_grid', locals: { listings: @space_listings} %>
+
+    <%= paginate @space_listings %>
+
+  </div>
+  <!-- end:article -->
+
 </div>
+<script>
+    $('#dropbox').change( function() {
+      $.get('/space_listings',{show_number: $('option:selected',this).val()});
+    });
+</script>
