--- a/app/views/space_listings/show.html.erb
+++ b/app/views/space_listings/show.html.erb
@@ -72,6 +72,11 @@
                 </table>
                 <h3>Property Description</h3>
                 <p><%= @space_listing.description %></p>
+
+                <% @space_listing.images.each do |image| %>
+                  <%= image_tag image.image_url %>
+                <% end %>
+
                 <%= link_to "Edit", edit_space_listing_path, class: "btn btn-success btn-lg" %>
                 <%= link_to "Delete", space_listing_path, method: :delete, class: "btn btn-success btn-lg" %>
                   </div>
@@ -94,7 +99,7 @@
                   <div class="col-md-6 col-sm-6">
                     <div class="team-container team-dark">
                       <div class="team-image">
-                        <img src="team01.jpg" alt="the team - mikha realestate theme">
+                        <%= image_tag "team01.jpg", alt:'' %>
                       </div>
                       <div class="team-description">
                         <h3><%= @space_listing.user.email %></h3>
