--- a/app/assets/stylesheets/space_listings.scss
+++ b/app/assets/stylesheets/space_listings.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the space_listings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#map {
+  height: 300px;
+  width: 300px;
+}
