--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,9 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <link href='http://fonts.googleapis.com/css?family=Raleway:400,600,800' rel='stylesheet' type='text/css'>
   <%= csrf_meta_tags %>
+  <script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_API_KEY"] %>&callback=initMap">
+  </script>
 </head>
 <body id="top">
   <p class="notice"><%= notice %></p>
@@ -22,5 +25,4 @@
   <%= render "shared/footer" %>
 
 <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&amp;language=en"></script>
 </html>
