--- a/app/views/space_listings/show.html.erb
+++ b/app/views/space_listings/show.html.erb
@@ -1,3 +1,6 @@
+<script async defer
+src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_API_KEY"] %>&callback=initMap">
+</script>
 <div class="row">
   <!-- begin:article -->
   <div class="col-md-9 col-md-push-3">
