--- a/app/views/space_listings/show.html.erb
+++ b/app/views/space_listings/show.html.erb
@@ -1,32 +1,3 @@
-<script>
-function initMap() {
-  var place = {lat: parseFloat(document.getElementById("latitude").innerHTML),
-               lng: parseFloat(document.getElementById("longtitude").innerHTML)};
-  var map = new google.maps.Map(document.getElementById('map-property'), {
-    zoom: 12,
-    center: place
-  });
-
-  var contentString = document.getElementById("description").innerHTML;
-
-  var infowindow = new google.maps.InfoWindow({
-    content: contentString,
-    maxWidth: 200
-  });
-
-  var marker = new google.maps.Marker({
-    position: place,
-    map: map,
-    title: document.getElementById("title").innerHTML
-  });
-  marker.addListener('click', function() {
-    infowindow.open(map, marker);
-  });
-}
-</script>
-<script async defer
-src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_API_KEY"] %>&callback=initMap">
-</script>
 <div class="row">
   <!-- begin:article -->
   <div class="col-md-9 col-md-push-3">
@@ -36,7 +7,6 @@ src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_API_KEY"] %>&ca
           <li class="active"><a href="#detail" data-toggle="tab"><i class="fa fa-university"></i> Listing Detail</a></li>
           <li><a href="#location" data-toggle="tab"><i class="fa fa-paper-plane-o"></i> Listing Location</a></li>
         </ul>
-
         <div id="myTabContent" class="tab-content">
           <div class="tab-pane fade in active" id="detail">
             <div class="row">
@@ -73,6 +43,7 @@ src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_API_KEY"] %>&ca
                   </a>
                 </div>
                 <h3>Listing Overview</h3>
+                <div id="map-canvas"></div>
                 <table class="table table-bordered">
                   <tr>
                     <td><strong>Address</strong></td>
@@ -118,7 +89,7 @@ src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_API_KEY"] %>&ca
           <div class="tab-pane fade" id="location">
             <div class="row">
               <div class="col-md-12">
-                <div id="map-property"></div>
+                <div id="map-canvas"></div>
               </div>
             </div>
             <div class="row">
@@ -180,3 +151,31 @@ src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_API_KEY"] %>&ca
       </div>
       <!-- end:article -->
     </div>
+    <script>
+        function initMap() {
+          var place = {
+            lat: <%= @space_listing.latitude %>,
+            lng: <%= @space_listing.longitude %>};
+
+            var map = new google.maps.Map(document.getElementById('map-canvas'), {
+              zoom: 12,
+              center: place
+            });
+
+            var contentString = document.getElementById("description").innerHTML;
+
+            var infowindow = new google.maps.InfoWindow({
+              content: contentString,
+              maxWidth: 200
+            });
+
+            var marker = new google.maps.Marker({
+              position: place,
+              map: map,
+              title: document.getElementById("title").innerHTML
+            });
+            marker.addListener('click', function() {
+              infowindow.open(map, marker);
+            });
+          }
+    </script>
