Show multiple pins on the map

--- a/app/views/space_listings/show.html.erb
+++ b/app/views/space_listings/show.html.erb
@@ -150,6 +150,9 @@
       </div>
       <!-- end:article -->
     </div>
+    <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_API_KEY"] %>&callback=initMap">
+    </script>
     <script>
         function initMap() {
           var place = {
