--- a/app/views/space_listings/index.html.erb
+++ b/app/views/space_listings/index.html.erb
@@ -1,33 +1,41 @@
 <h1>All Listings</h1>
-<div class="table-responsive">
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>title</th>
-      <th>description</th>
-      <th>monthly rent</th>
-      <th>day rent</th>
-      <th>address</th>
-      <th>zip code</th>
-      <th>city</th>
-      <th>state</th>
-      <th>unit size</th>
-    </tr>
-  </thead>
-<% @space_listings.each do |space_listing| %>
-  <tbody>
-    <tr>
-      <td><%= space_listing.title %></td>
-      <td><%= space_listing.description %></td>
-      <td><%= space_listing.monthly_rent %></td>
-      <td><%= space_listing.day_rent %></td>
-      <td><%= space_listing.address %></td>
-      <td><%= space_listing.zip_code %></td>
-      <td><%= space_listing.city %></td>
-      <td><%= space_listing.state %></td>
-      <td><%= space_listing.size_width %>X<%= space_listing.size_length %>X<%= space_listing.size_height %></td>
-    </tr>
-  </tbody>
-<% end %>
-</table>
-</div>
+<div id="map"></div>
+<script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_API_KEY"] %>&callback=initializeMap">
+</script>
+<script>
+function initializeMap() {
+  var locations = [
+    <% @space_listings.each_with_index do |listing, index| %>
+      <% if listing != @space_listings.last %>
+        ['<%= link_to listing.title, space_listing_path(listing) %><br/><%= listing.description %>', <%= listing.latitude %>, <%= listing.longitude %>, <%= index + 1 %>],
+      <% else %>
+        ['<%= link_to listing.title, space_listing_path(listing) %><br/><%= listing.description %>', <%= listing.latitude %>, <%= listing.longitude %>, <%= index + 1 %>]
+      <% end %>
+    <% end %>
+  ];
+  var map = new google.maps.Map(document.getElementById('map'), {
+    zoom: 10,
+    center: new google.maps.LatLng(<%= @space_listings.first.latitude %>, <%= @space_listings.first.longitude %>),
+    mapTypeId: google.maps.MapTypeId.ROADMAP
+  });
+
+  var infowindow = new google.maps.InfoWindow();
+
+  var marker, i;
+
+  for (i = 0; i < locations.length; i++) {
+    marker = new google.maps.Marker({
+      position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+      map: map
+    });
+
+    google.maps.event.addListener(marker, 'click', (function(marker, i) {
+      return function() {
+        infowindow.setContent(locations[i][0]);
+        infowindow.open(map, marker);
+      }
+    })(marker, i));
+  }
+}
+</script>
