--- a/app/views/layouts/_forms.html.erb
+++ b/app/views/layouts/_forms.html.erb
@@ -141,6 +141,10 @@ function initAutocomplete() {
   </div>
 </div>
 
+<div class="uploaded-images">
+  <%= render 'images/list' %>
+</div>
+
 <p>
   <%= f.submit f.object.new_record? ? "Create" : "Update", class:"btn btn-success btn-lg" %>
 </p>
