--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,8 +4,23 @@
   <%= devise_error_messages! %>
 
   <div class="form-group">
+    <%= f.label :first_name %><br />
+    <%= f.text_field :first_name, autofocus: true , class: "form-control input-lg" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :last_name %><br />
+    <%= f.text_field :last_name, autofocus: true , class: "form-control input-lg" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :phone_number %><br />
+    <%= f.phone_field :phone_number, autofocus: true , class: "form-control input-lg" %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true , :class => "form-control input-lg" %>
+    <%= f.email_field :email, autofocus: true , class: "form-control input-lg" %>
   </div>
 
   <div class="form-group">
@@ -13,16 +28,16 @@
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" , :class => "form-control input-lg" %>
+    <%= f.password_field :password, autocomplete: "off" , class: "form-control input-lg" %>
   </div>
 
   <div class="form-group">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" , :class => "form-control input-lg" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off" , class: "form-control input-lg" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up", :class => "btn btn-success btn-block btn-lg" %>
+    <%= f.submit "Sign up", class: "btn btn-success btn-block btn-lg" %>
   </div>
 <% end %>
 
