--- a/app/assets/stylesheets/space_listings.scss
+++ b/app/assets/stylesheets/space_listings.scss
@@ -12,30 +12,61 @@ html, body {
 }
 
 .btn-file {
-    position: relative;
-    overflow: hidden;
+  position: relative;
+  overflow: hidden;
 }
 
 .btn-file input[type=file] {
-    position: absolute;
-    top: 0;
-    right: 0;
-    min-width: 100%;
-    min-height: 100%;
-    font-size: 100px;
-    text-align: right;
-    filter: alpha(opacity=0);
-    opacity: 0;
-    outline: none;
-    background: white;
-    cursor: inherit;
-    display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 100px;
+  text-align: right;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  outline: none;
+  background: white;
+  cursor: inherit;
+  display: block;
 }
 
 .panel-heading.preview {
   padding: 0;
 }
 
-.panel-heading.preview img{  
+.panel-heading.preview img{
   width: 100%;
+}
+
+.text-muted {
+  color: #bbbbbb;
+}
+
+.fixed-input-group{
+  margin-top: 50px;
+}
+
+.fixed-input-group .icon {
+  position: absolute;
+  top: 0%;
+  left: 2%;
+  margin-left: 17px;
+  margin-top: 60px;
+  z-index: 342;
+  color: #4f5b66;
+}
+
+.input-group-home input {
+  padding-left: 40px;
+}
+
+.box-all {
+  position: relative;
+  width: 100%;
+  min-height: 250px;
+  height: auto;
+  padding-top: 120px;
+  padding-bottom: 60px;
 }
