--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,17 +10,17 @@
 
   <div class="form-group">
     <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autofocus: true , class: "form-control input-lg" %>
+    <%= f.text_field :last_name, class: "form-control input-lg" %>
   </div>
 
   <div class="form-group">
     <%= f.label :phone_number %><br />
-    <%= f.phone_field :phone_number, autofocus: true , class: "form-control input-lg" %>
+    <%= f.phone_field :phone_number, class: "form-control input-lg" %>
   </div>
 
   <div class="form-group">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true , class: "form-control input-lg" %>
+    <%= f.email_field :email, class: "form-control input-lg" %>
   </div>
 
   <div class="form-group">
