--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,6 +18,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><%= link_to "Home", root_path %></li>
         <% if current_user %>
+          <li><%= link_to "View all Listings", space_listings_path %></li>
           <li><%= link_to "New Listing", new_space_listing_path %></li>
           <li><%= link_to 'Dashboard', "#", :class => "signin" %></li>
           <li><%= link_to 'Sign out', destroy_user_session_path, :class => "signup", method: :delete %></li>
