--- a/app/views/shared/_service.html.erb
+++ b/app/views/shared/_service.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2>Mikha Best Real Estate Deals <small>You need to do is very simple just join us</small></h2>
+        <h2>BetterSpace Features<small>Why pay for a dedicated storage facility?</small></h2>
       </div>
     </div>
     <div class="row">
@@ -12,9 +12,8 @@
             <a href="#"><i class="fa fa-home"></i></a>
           </div>
           <div class="service-content">
-            <h3>Lorem ipsum dolor sit</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt.</p>
+            <h3>LISTING</h3>
+            <p>It's free to hose your available space on BetterSpace to find your next renter.</p>
           </div>
         </div>
       </div>
@@ -25,9 +24,8 @@
             <a href="#"><i class="fa fa-check-square-o"></i></a>
           </div>
           <div class="service-content">
-            <h3>Lorem ipsum dolor sit</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt.</p>
+            <h3>SENTIMENTAL</h3>
+            <p>Your goods and items have value beyond their utility.</p>
           </div>
         </div>
       </div>
@@ -38,9 +36,8 @@
             <a href="#"><i class="fa fa-thumbs-up"></i></a>
           </div>
           <div class="service-content">
-            <h3>Lorem ipsum dolor sit</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt.</p>
+            <h3>AFFORDABLE</h3>
+            <p>You no longer have to pay exorbitant storage fees.</p>
           </div>
         </div>
       </div>
@@ -51,9 +48,8 @@
             <a href="#"><i class="fa fa-umbrella"></i></a>
           </div>
           <div class="service-content">
-            <h3>Lorem ipsum dolor sit</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt.</p>
+            <h3>COMMUNICATE</h3>
+            <p>Exchange messages with Hosts to find the right fit for you.</p>
           </div>
         </div>
       </div>
