--- a/app/views/space_listings/index.html.erb
+++ b/app/views/space_listings/index.html.erb
@@ -1,4 +1,10 @@
 <h1>All Listings</h1>
+
+<div class="col-md-4 col-sm-4 col-xs-3">
+  <a href="/space_listings" class="btn btn-default"><i class="fa fa-map"></i></a>
+  <a href="/list_view" class="btn btn-success"><i class="fa fa-list"></i></a>
+</div>
+
 <div id="map"></div>
 <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_API_KEY"] %>&callback=initializeMap">
