--- a/app/views/space_listings/show.html.erb
+++ b/app/views/space_listings/show.html.erb
@@ -13,6 +13,8 @@
             <div class="row">
               <div class="col-md-12">
                 <h2 id="title"><%= @space_listing.title %></h2>
+                <a href="#" class="btn btn-success">Book This Space</a>
+
                 <div id="slider-property" class="carousel slide" data-ride="carousel">
                   <ol class="carousel-indicators">
                     <li data-target="#slider-property" data-slide-to="0" class="">
