Add the datepicker stylesheet and style the move in and move out

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
  * file per style scope.
  *
  *= require bootstrap
+ *= require bootstrap-datepicker3.min
  *= require font-awesome
  *= require style.min
  *= require responsive.min
