--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -5,30 +5,31 @@
 <h1>Booking Space</h1>
 
 <%= form_for @booking do |f| %>
-
-<div class="form-group">
-  <%= f.label :move_in, "Move In" %>
-  <%= f.text_field :move_in, class:"form-control input-group date", "data-provide"=>"datepicker" do %>
-    <div class="input-group-addon">
-        <span class="glyphicon glyphicon-th"></span>
+  <div class="row">
+    <div class="col-md-3 col-xs-6">
+      <%= f.label :move_in, "Move In" %>
+      <div class="input-group date mg-check-in focus">
+        <div class="input-group-addon"><i class="fa fa-calendar"></i></div>
+        <%= f.text_field :move_in, class:"form-control input-group date", "data-provide"=>"datepicker", placeholder:"mm/dd/yyyy"%>
+      </div>
     </div>
-  <% end %>
-</div>
 
-<div class="form-group">
-  <%= f.label :move_out, "Move Out" %>
-  <%= f.text_field :move_out, class:"form-control input-group date", "data-provide"=>"datepicker" do %>
-    <div class="input-group-addon">
-        <span class="glyphicon glyphicon-th"></span>
+    <div class="col-md-3 col-xs-6">
+      <%= f.label :move_out, "Move Out" %>
+      <div class="input-group date mg-check-in focus">
+        <div class="input-group-addon"><i class="fa fa-calendar"></i></div>
+        <%= f.text_field :move_out, class:"form-control input-group date", "data-provide"=>"datepicker", placeholder:"mm/dd/yyyy"%>
+      </div>
     </div>
-  <% end %>
-</div>
 
-<%= f.hidden_field :space_listing_id %>
-
-<p>
-  <%= f.submit f.object.new_record? ? "Book Now" : "Update", class:"btn btn-success btn-lg" %>
-</p>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-md-3 col-xs-6">
+      <%= f.hidden_field :space_listing_id %>
+      <%= f.submit "Book Now", class:"btn btn-success btn-block" %>
+    </div>
+  </div>
 <% end %>
 
 </div>
