--- a/app/views/space_listings/index.html.erb
+++ b/app/views/space_listings/index.html.erb
@@ -1,4 +1,13 @@
-<h1>All Listings</h1>
+<div class="row">
+  <!-- begin:article -->
+  <div class="col-md-9 col-md-push-3">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="heading-title heading-title-alt">
+          <h3>Space Listings</h3>
+        </div>
+      </div>
+    </div>
 
 <div class="col-md-4 col-sm-4 col-xs-3">
   <a href="/space_listings" class="btn btn-default"><i class="fa fa-map"></i></a>
@@ -6,6 +15,9 @@
 </div>
 
 <div id="map"></div>
+</div>
+<!-- end:article -->
+</div>
 <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_API_KEY"] %>&callback=initializeMap">
 </script>
