--- a/app/views/space_listings/list_view.html.erb
+++ b/app/views/space_listings/list_view.html.erb
@@ -1,86 +1,86 @@
-<div class="row">
-  <!-- begin:article -->
-  <div class="col-md-9 col-md-push-3">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="heading-title heading-title-alt">
-          <h3>Space Listings</h3>
-        </div>
-      </div>
-    </div>
-    <!-- begin:sorting -->
-    <div class="row sort">
-      <div class="col-md-4 col-sm-4 col-xs-3">
-        <a href="/space_listings" class="btn btn-default"><i class="fa fa-map"></i></a>
-        <a href="/list_view" class="btn btn-success"><i class="fa fa-list"></i></a>
-        <%= style_page_info(page_entries_info @space_listings) %>
-      </div>
-      <div class="col-md-8 col-sm-8 col-xs-9">
-        <form class="form-inline" role="form">
-          <span>Sort by : </span>
-          <div class="form-group">
-            <label class="sr-only" for="sortby">Sort by : </label>
-            <select class="form-control">
-              <option>Most Recent</option>
-              <option>Price (Low &gt; High)</option>
-              <option>Price (High &gt; Low)</option>
-              <option>Most Popular (Low &gt; High)</option>
-            </select>
-          </div>
-          <span>Show : </span>
-          <div class="form-group">
-            <label class="sr-only" for="show">Show : </label>
-            <select class="form-control">
-              <option>6</option>
-              <option>10</option>
-              <option>15</option>
-              <option>20</option>
-              <option>25</option>
-              <option>50</option>
-              <option>100</option>
-            </select>
-          </div>
-        </form>
-      </div>
-    </div>
-    <!-- end:sorting -->
-
-    <!-- begin:product -->
-    <div class="row container-realestate">
-      <% @space_listings.each do |space_listing| %>
-      <div class="col-md-12 col-sm-12 col-xs-12">
-        <div class="property-container">
-          <div class="property-content-list">
-            <div class="property-image-list">
-              <%= image_tag "img13.jpg", alt:"" %>
-              <div class="property-price">
-                <h4><%= space_listing.title %></h4>
-                <span><%= number_to_currency space_listing.monthly_rent %><small>/month</small></span>
-              </div>
-              <div class="property-status">
-                <span>For Rent</span>
-              </div>
-              <div class="property-footer">
-                <a href="#" title="Add to favorite"><i class="fa fa-heart"></i></a>
-                <a href="#" title="Contact Agent"><i class="fa fa-envelope"></i></a>
-              </div>
-            </div>
-            <div class="property-text">
-              <h3><%= link_to "#{space_listing.title}", "/space_listings/#{space_listing.id}" %><small><%= space_listing.address %>, <%= space_listing.city %></small></h3>
-              <p><%= space_listing.description %></p>
-              <p><a href="#" class="btn btn-success">More Detail &raquo;</a></p>
-              <p><%= link_to "Book Space", "/bookings/new?space_listing_id=#{space_listing.id}", class: "btn btn-success" %></p>
-            </div>
+<div class="row" ng-app="app">
+  <div ng-controller="spaceListingCtrl" ng-init="setup()">
+    <!-- begin:article -->
+    <div class="col-md-9 col-md-push-3">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="heading-title heading-title-alt">
+            <h3>Space Listings</h3>
           </div>
         </div>
       </div>
-      <% end %>
+      <!-- begin:sorting -->
+      <div class="row sort">
+        <div class="col-md-4 col-sm-4 col-xs-3">
+          <a href="/space_listings" class="btn btn-default"><i class="fa fa-map"></i></a>
+          <a href="/list_view" class="btn btn-success"><i class="fa fa-list"></i></a>
+          <%= style_page_info(page_entries_info @space_listings) %>
+        </div>
+        <div class="col-md-8 col-sm-8 col-xs-9">
+          <form class="form-inline" role="form">
+            <span>Sort by : </span>
+            <div class="form-group">
+              <label class="sr-only" for="sortby">Sort by : </label>
+              <select class="form-control">
+                <option>Most Recent</option>
+                <option>Price (Low &gt; High)</option>
+                <option>Price (High &gt; Low)</option>
+                <option>Most Popular (Low &gt; High)</option>
+              </select>
+            </div>
+            <span>Show : </span>
+            <div class="form-group">
+              <label class="sr-only" for="show">Show : </label>
+              <select class="form-control">
+                <option>6</option>
+                <option>10</option>
+                <option>15</option>
+                <option>20</option>
+                <option>25</option>
+                <option>50</option>
+                <option>100</option>
+              </select>
+            </div>
+          </form>
+        </div>
+      </div>
+      <!-- end:sorting -->
+
+      <!-- begin:product -->
+      <div class="row container-realestate">
+        <div ng-repeat="space_listing in spaceListings" class="col-md-12 col-sm-12 col-xs-12">
+          <div class="property-container">
+            <div class="property-content-list">
+              <div class="property-image-list">
+                <%= image_tag "img13.jpg", alt:"" %>
+                <div class="property-price">
+                  <h4> {{ space_listing.title }} </h4>
+                  <span> {{ space_listing.monthly_rent }}<small>/month</small></span>
+                </div>
+                <div class="property-status">
+                  <span>For Rent</span>
+                </div>
+                <div class="property-footer">
+                  <a href="#" title="Add to favorite"><i class="fa fa-heart"></i></a>
+                  <a href="#" title="Contact Agent"><i class="fa fa-envelope"></i></a>
+                </div>
+              </div>
+              <div class="property-text">
+                <h3><a href="/space_listings/{{space_listing.id}}">{{space_listing.title}}</a>
+                  <small>{{ space_listing.address }}, {{ space_listing.city }}</small></h3>
+                <p>{{ space_listing.description }}</p>
+                <p><a href="#" class="btn btn-success">More Detail &raquo;</a></p>
+                <p><a href="/bookings/new?space_listing_id={{space_listing.id}}" class="btn btn-success">Book Space</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- end:product -->
+
+      <%= paginate @space_listings %>
+
     </div>
-    <!-- end:product -->
-
-    <%= paginate @space_listings %>
-
+    <!-- end:article -->
   </div>
-  <!-- end:article -->
-
 </div>
