booking index page

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -4,5 +4,7 @@
 
 <h1>Booking Space Show Page</h1>
 
+  <p>Your booking is now pending and host needs to approve your request.</p>
 
+  <%= link_to "View all bookings", bookings_path %>
 </div>
