--- a/app/views/bookings/your_bookings.html.erb
+++ b/app/views/bookings/your_bookings.html.erb
@@ -18,15 +18,15 @@
         <h1>Your Bookings</h1>
         <table class="table">
           <tr>
-            <th>Title</th>
-            <th>Move In</th>
-            <th>Move Out</th>
-            <th>Renter</th>
-            <th>Price</th>
-            <th>Status</th>
+            <th><a href="#" ng-click="toggleOrder('title')">Title</a></th>
+            <th><a href="#" ng-click="toggleOrder('move_in')">Move In</a></th>
+            <th><a href="#" ng-click="toggleOrder('move_out')">Move Out</a></th>
+            <th><a href="#" ng-click="toggleOrder('renter')">Renter</a></th>
+            <th><a href="#" ng-click="toggleOrder('price')">Price</a></th>
+            <th><a href="#" ng-click="toggleOrder('status')">Status</a></th>
             <th>Action</th>
           </tr>
-          <tr ng-repeat="space_listing in spaceListings">
+          <tr ng-repeat="space_listing in spaceListings | orderBy: orderAttribute:descending">
             <td>{{ space_listing.title }}</td>
             <td ng-repeat="booking in space_listing.bookings">
               {{ booking.move_in }}
